--- a/網頁/AttackPage/AttackPageAll.css
+++ b/網頁/AttackPage/AttackPageAll.css
@@ -286,8 +286,11 @@ button{
 
 
 }
-
-
+.l-earth{
+	position: absolute;
+	top: 40%;
+	width: 25%;
+}
 .l-word {
     position: absolute;
     top: 55%;
@@ -296,85 +299,6 @@ button{
 	text-align: center;
    
 }
-
-.circle {
-    width: 1%;
-    left: 45%;
-    top: 45%; 
-    background-color: #999;
-    border-radius: 50%;
-    display: inline-block;
-    position: absolute;
-    transform-origin: 50%;
-    animation: circle .5s alternate infinite ease ;
-	animation-delay: 0.5s;		
-}
-
-
-
-.circle:nth-child(2) {
-    left: 50%;
-    animation-delay: .2s
-}
-
-.circle:nth-child(3) {
-    left: 55%;
-    animation-delay: .3s
-}
-
-@keyframes circle {
-    0% {
-        top: 45%;
-        height: 5px;
-        border-radius: 50px 50px 25px 25px;
-        transform: scaleX(1.7);
-    }
-    40% {
-        height: 20px;
-        border-radius: 50%;
-        transform: scaleX(1);
-    }
-    100% {
-        top: 30%;
-    }
-}
-
-.shadow {
-    width: 20px;
-    height: 4px;
-    border-radius: 50%;
-    background-color: rgba(0, 0, 0, .125);
-    position: absolute;
-    top: 60px;
-    animation: shadow .5s alternate infinite ease;
-}
-
-
-
-.shadow:nth-child(4) {
-    left: 35%;
-    animation-delay: .2s
-}
-
-.shadow:nth-child(5) {
-    left: 70%;
-    animation-delay: .3s
-}
-
-@keyframes shadow {
-    0% {
-        transform: scaleX(1.5);
-    }
-    40% {
-        transform: scaleX(1);
-        opacity: .7;
-    }
-    100% {
-        transform: scaleX(.2);
-        opacity: .4;
-    }
-}
-
 .CountTo100{
 	color: #000;
 	width: 500px;
