--- a/網頁/AttackPage/AttackPageAll.css
+++ b/網頁/AttackPage/AttackPageAll.css
@@ -131,6 +131,18 @@ button{
 	overflow: hidden;
 
 }
+.view4-Mobile{
+	font-family: Gen Jyuu Gothic ;
+	position: absolute;
+	z-index: 5;
+	margin-top: 224%;
+	left: 0%;
+	width: 100%;
+	padding-bottom: 56%;
+	background-color: transparent;
+	font-size: 1.33rem;
+	display: none;
+}
 .view5{
 	font-family: Gen Jyuu Gothic ;
 	position: absolute;
