--- a/網頁/AttackPage/AtackPagePart4.css
+++ b/網頁/AttackPage/AtackPagePart4.css
@@ -4390,7 +4390,9 @@
 	.bg4{
 		display: none;
 	}
-	
+	.bg4-1Mobile{
+		display: block;
+	}
 }
 
 @media (min-device-width: 100px) and (max-device-width: 375px){
@@ -4398,5 +4400,8 @@
 	
 	.bg4{
 		display: none;
+	}
+	.bg4-1Mobile{
+		display: block;
 	}
 }
