--- a/網頁/AttackPage/AtackPagePart4.css
+++ b/網頁/AttackPage/AtackPagePart4.css
@@ -12,7 +12,7 @@
 	overflow: hidden;
 
 }
-.bg4-Mobile{
+.bg4-1Mobile{
 	position: absolute;
 	z-index: -1;
 	left: 0%;
@@ -4390,7 +4390,7 @@
 	.bg4{
 		display: none;
 	}
-	.bg4-Mobile{
+	.bg4-1Mobile{
 		display: block;
 	}
 }
@@ -4401,7 +4401,7 @@
 	.bg4{
 		display: none;
 	}
-	.bg4-Mobile{
+	.bg4-1Mobile{
 		display: block;
 	}
 }
