--- a/網頁/AttackPage/AtackPagePart4.css
+++ b/網頁/AttackPage/AtackPagePart4.css
@@ -107,6 +107,7 @@
 	border-right: 0px;
 	border-radius: 1px;
 	font-weight: bold;
+	line-height: 0;
 
 }
 .Disaster.open{
@@ -141,6 +142,7 @@
 	border-radius: 1px;
 	font-weight: bold;
 	text-align: center;
+	line-height: 0;
 
 }
 .MainMenu{
