--- a/網頁/AttackPage/AtackPagePart4.css
+++ b/網頁/AttackPage/AtackPagePart4.css
@@ -21,7 +21,7 @@
 	display: none;
 	border: solid 2px red;
 }
-.BA{
+.SDCBA{
 	position: absolute;
 	margin-left: 93%;
 	margin-top: 10%;
@@ -270,7 +270,7 @@
     margin-left: -310%;
 	opacity: 0;
 }
-.BG{
+.SDCBG{
 	position: absolute;
 	z-index: 16;
 	margin-top: 0%;
@@ -281,7 +281,7 @@
 	opacity: 1;
 
 }
-.BG.open{
+.SDCBG.open{
 	-webkit-transition: 2s;
     -moz-transition: 2s;
     -ms-transition: 2s;
@@ -290,7 +290,7 @@
 	opacity: 0.9;
 	margin-left: 0%;
 }
-.Main{
+.SDCMain{
 	position: absolute;
 	z-index: 17;
 	margin-left: 4.17%;
@@ -306,7 +306,7 @@
 
 
 }
-.Sub{
+.SDCSub{
 	position: absolute;
 	z-index: 17;
 	margin-left: 32.55%;
@@ -315,7 +315,7 @@
 	font-size: 2.2rem;
 	font-weight: normal;
 }
-.part1{
+.SDCpart1{
 	overflow: visible;
 	position: absolute;
 	z-index: 17;
@@ -333,13 +333,13 @@
 	justify-content: center;
 	-webkit-background-size: contain;
 }
-.part1:hover{
+.SDCpart1:hover{
 	-webkit-filter:brightness(1.2);
 	background-image: url(../../Animation/WorldDamage/紅樹林.gif);
 
 }
 
-.part1.open{
+.SDCpart1.open{
 	-webkit-transition: 0.5s;
     -moz-transition: 0.5s;
     -ms-transition: 0.5s;
@@ -351,10 +351,10 @@
 	-webkit-background-size: contain;
 
 }
-.part1.open:hover{
+.SDCpart1.open:hover{
 	-webkit-filter:brightness(1);
 }
-.part1.close{
+.SDCpart1.close{
 	-webkit-transition: 0.5s;
     -moz-transition: 0.5s;
     -ms-transition: 0.5s;
@@ -364,7 +364,7 @@
 	opacity: 1;	
 }
 
-.part1Title{
+.SDCpart1Title{
 	position: absolute;
 	z-index: 19;
 	margin-top: 17.5%;
@@ -378,7 +378,7 @@
 	justify-content: center;
 }
 
-.part1Title.open{
+.SDCpart1Title.open{
     transition: 1s;
 	width: 100%;
 	margin-left: 0%;
@@ -388,7 +388,7 @@
 	background-color: transparent;
 }
 
-.part1Title.close{
+.SDCpart1Title.close{
 	width: 39.06%;
 	margin-top: 17.5%;
 	margin-left: 10.42%;
@@ -396,7 +396,7 @@
 	background-color: #1E3239;
 }
 
-.part2{
+.SDCpart2{
 	position: absolute;
 	z-index: 17;
 	margin-top: 8.5%;
@@ -414,12 +414,12 @@
 	-webkit-background-size: contain;
 
 }
-.part2:hover{
+.SDCpart2:hover{
 	-webkit-filter:brightness(1.2);
 	background-image: url(../../Animation/WorldDamage/大堡礁.gif);
 
 }
-.part2.open{
+.SDCpart2.open{
 	-webkit-transition: 1s;
     -moz-transition: 1s;
     -ms-transition: 1s;
@@ -432,11 +432,11 @@
 	-webkit-background-size: contain;
 
 }
-.part2.open:hover{
+.SDCpart2.open:hover{
 	-webkit-filter:brightness(1);
 
 }
-.part2.close{
+.SDCpart2.close{
 	-webkit-transition: 1s;
     -moz-transition: 1s;
     -ms-transition: 1s;
@@ -446,7 +446,7 @@
 	opacity: 1;	
 }
 
-.part2Title{
+.SDCpart2Title{
 	position: absolute;
 	z-index: 19;
 	margin-top: 17.5%;
@@ -459,7 +459,7 @@
 	align-items: center;
 	justify-content: center;
 }
-.part2Title.open{
+.SDCpart2Title.open{
     transition: 1s;
 	width: 100%;
 	margin-left: 0%;
@@ -469,7 +469,7 @@
 	background-color: transparent;
 }
 
-.part2Title.close{
+.SDCpart2Title.close{
 	margin-top: 17.5%;
 	margin-left: 50.89%;
 	width: 39.06%;
@@ -477,7 +477,7 @@
 	background-color: #1E3239;
 }
 
-.part3{
+.SDCpart3{
 	position: absolute;
 	z-index: 17;
 	margin-top: 32.5%;
@@ -494,12 +494,12 @@
 	justify-content: center;
 	-webkit-background-size: contain;
 }
-.part3:hover{
+.SDCpart3:hover{
 	-webkit-filter:brightness(1.2);
 	background-image: url(../../Animation/WorldDamage/鯊魚鮪魚.gif);
 
 }
-.part3.open{
+.SDCpart3.open{
 	-webkit-transition: 2s;
     -moz-transition: 2s;
     -ms-transition: 2s;
@@ -511,12 +511,12 @@
 	-webkit-background-size: contain;
 
 }
-.part3.open:hover{
+.SDCpart3.open:hover{
 	
 	-webkit-filter:brightness(1);
 
 }
-.part3.close{
+.SDCpart3.close{
 	-webkit-transition: 0.5s;
     -moz-transition: 0.5s;
     -ms-transition: 0.5s;
@@ -526,7 +526,7 @@
 	opacity: 1;	
 }
 
-.part3Title{
+.SDCpart3Title{
 	position: absolute;
 	z-index: 19;
 	margin-top: 41.5%;
@@ -539,7 +539,7 @@
 	align-items: center;
 	justify-content: center;
 }
-.part3Title.open{
+.SDCpart3Title.open{
    	transition: 1s;
 	width: 100%;
 	margin-left: 0%;
@@ -549,7 +549,7 @@
 	background-color: transparent;
 }
 
-.part3Title.close{
+.SDCpart3Title.close{
 	transition: 1s;
 	margin-top: 41.5%;
 	margin-left: 10.42%;
@@ -557,7 +557,7 @@
 	background-color: #1E3239;
 }
 
-.part4{
+.SDCpart4{
 	position: absolute;
 	z-index: 17;
 	margin-top: 32.5%;
@@ -574,13 +574,13 @@
 	justify-content: center;
 	-webkit-background-size: contain;
 }
-.part4:hover{
+.SDCpart4:hover{
 	-webkit-filter:brightness(1.2);
 	background-image: url(../../Animation/WorldDamage/高山物種滅絕.gif);
 
 }
 
-.part4.open{
+.SDCpart4.open{
 	-webkit-transition: 1s;
     -moz-transition: 1s;
     -ms-transition: 1s;
@@ -593,11 +593,11 @@
 	-webkit-background-size: contain;
 
 }
-.part4.open:hover{
+.SDCpart4.open:hover{
 	-webkit-filter:brightness(1);
 
 }
-.part4.close{
+.SDCpart4.close{
 	-webkit-transition: 1s;
     -moz-transition: 1s;
     -ms-transition: 1s;
@@ -607,7 +607,7 @@
 	opacity: 1;	
 }
 
-.part4Title{
+.SDCpart4Title{
 	position: absolute;
 	z-index: 19;
 	margin-top: 41.5%;
@@ -620,7 +620,7 @@
 	align-items: center;
 	justify-content: center;
 }
-.part4Title.open{
+.SDCpart4Title.open{
     transition: 1s;
 	width: 100%;
 	margin-left: 0%;
@@ -630,15 +630,27 @@
 	background-color: transparent;
 }
 
-.part4Title.close{
+.SDCpart4Title.close{
 	transition: 1s;
 	margin-top: 41.5%;
 	margin-left: 50.89%;
 	width: 39.06%;
 	background-color: #1E3239;
 }
-
-.Content{
+.SDCContent.open{
+	position: absolute;
+	margin-top: 0%;
+	margin-left: 0%;
+	width: 100%;
+	padding-bottom: 56%;
+	background-color: #1E3239;
+	opacity: 0.95;
+	display: flex;
+	
+	color: #ffffff;
+	
+}
+.SDCContent{
 	position: absolute;
 	z-index: -1;
 	margin-top: 0%;
@@ -652,20 +664,7 @@
 	align-items: center;
 	justify-content: flex-end;
 }
-
-.Content.open{
-	position: absolute;
-	margin-top: 0%;
-	margin-left: 0%;
-	width: 100%;
-	padding-bottom: 56%;
-	background-color: #1E3239;
-	opacity: 0.95;
-	display: flex;
-	color: #ffffff;
-	
-}
-.part1Contenttext{
+.SDCpart1Contenttext{
 	position: absolute;
 	margin-top: 54%;
 	margin-left: 55.21%;
@@ -678,12 +677,12 @@
 	line-height: 1.8;
 	opacity: 0;
 }
-.part1Contenttext.open{
+.SDCpart1Contenttext.open{
 	transition: 1s opacity  0.5s;
 	opacity: 1;
 }
 
-.part2Contenttext{
+.SDCpart2Contenttext{
 	position: absolute;
 	margin-top: 54%;
 	margin-left: 55.21%;
@@ -697,12 +696,12 @@
 	opacity: 0;
 	
 }
-.part2Contenttext.open{
+.SDCpart2Contenttext.open{
 	transition: 1s opacity  0.5s;
 	opacity: 1;
 }
 
-.part3Contenttext{
+.SDCpart3Contenttext{
 	position: absolute;
 	margin-top: 54%;
 	margin-left: 55.21%;
@@ -714,12 +713,12 @@
 	justify-content: flex-start;
 	opacity: 0;
 }
-.part3Contenttext.open{
+.SDCpart3Contenttext.open{
 	transition: 1s opacity  0.5s;
 	opacity: 1;
 }
 
-.part4Contenttext{
+.SDCpart4Contenttext{
 	position: absolute;
 	margin-top: 54%;
 	margin-left: 55.21%;
@@ -732,7 +731,7 @@
 	opacity: 0;
 	 
 }
-.part4Contenttext.open{
+.SDCpart4Contenttext.open{
 	transition: 1s opacity  0.5s;
 	opacity: 1;
 }
