--- a/網頁/AttackPage/AtackPagePart4.css
+++ b/網頁/AttackPage/AtackPagePart4.css
@@ -664,7 +664,7 @@
 	align-items: center;
 	justify-content: flex-end;
 }
-.SDCpart1Contenttext{
+.part1Contenttext{
 	position: absolute;
 	margin-top: 54%;
 	margin-left: 55.21%;
@@ -677,12 +677,12 @@
 	line-height: 1.8;
 	opacity: 0;
 }
-.SDCpart1Contenttext.open{
+.part1Contenttext.open{
 	transition: 1s opacity  0.5s;
 	opacity: 1;
 }
 
-.SDCpart2Contenttext{
+.part2Contenttext{
 	position: absolute;
 	margin-top: 54%;
 	margin-left: 55.21%;
@@ -696,12 +696,12 @@
 	opacity: 0;
 	
 }
-.SDCpart2Contenttext.open{
+.part2Contenttext.open{
 	transition: 1s opacity  0.5s;
 	opacity: 1;
 }
 
-.SDCpart3Contenttext{
+.part3Contenttext{
 	position: absolute;
 	margin-top: 54%;
 	margin-left: 55.21%;
@@ -713,12 +713,12 @@
 	justify-content: flex-start;
 	opacity: 0;
 }
-.SDCpart3Contenttext.open{
+.part3Contenttext.open{
 	transition: 1s opacity  0.5s;
 	opacity: 1;
 }
 
-.SDCpart4Contenttext{
+.part4Contenttext{
 	position: absolute;
 	margin-top: 54%;
 	margin-left: 55.21%;
@@ -731,7 +731,7 @@
 	opacity: 0;
 	 
 }
-.SDCpart4Contenttext.open{
+.part4Contenttext.open{
 	transition: 1s opacity  0.5s;
 	opacity: 1;
 }
