--- a/網頁/AttackPage/AtackPagePart4.css
+++ b/網頁/AttackPage/AtackPagePart4.css
@@ -364,7 +364,7 @@
 	opacity: 1;	
 }
 
-.part1Title{
+.SDCpart1Title{
 	position: absolute;
 	z-index: 19;
 	margin-top: 17.5%;
@@ -378,7 +378,7 @@
 	justify-content: center;
 }
 
-.part1Title.open{
+.SDCpart1Title.open{
     transition: 1s;
 	width: 100%;
 	margin-left: 0%;
@@ -388,7 +388,7 @@
 	background-color: transparent;
 }
 
-.part1Title.close{
+.SDCpart1Title.close{
 	width: 39.06%;
 	margin-top: 17.5%;
 	margin-left: 10.42%;
@@ -446,7 +446,7 @@
 	opacity: 1;	
 }
 
-.part2Title{
+.SDCpart2Title{
 	position: absolute;
 	z-index: 19;
 	margin-top: 17.5%;
@@ -459,7 +459,7 @@
 	align-items: center;
 	justify-content: center;
 }
-.part2Title.open{
+.SDCpart2Title.open{
     transition: 1s;
 	width: 100%;
 	margin-left: 0%;
@@ -469,7 +469,7 @@
 	background-color: transparent;
 }
 
-.part2Title.close{
+.SDCpart2Title.close{
 	margin-top: 17.5%;
 	margin-left: 50.89%;
 	width: 39.06%;
@@ -526,7 +526,7 @@
 	opacity: 1;	
 }
 
-.part3Title{
+.SDCpart3Title{
 	position: absolute;
 	z-index: 19;
 	margin-top: 41.5%;
@@ -539,7 +539,7 @@
 	align-items: center;
 	justify-content: center;
 }
-.part3Title.open{
+.SDCpart3Title.open{
    	transition: 1s;
 	width: 100%;
 	margin-left: 0%;
@@ -549,7 +549,7 @@
 	background-color: transparent;
 }
 
-.part3Title.close{
+.SDCpart3Title.close{
 	transition: 1s;
 	margin-top: 41.5%;
 	margin-left: 10.42%;
@@ -607,7 +607,7 @@
 	opacity: 1;	
 }
 
-.part4Title{
+.SDCpart4Title{
 	position: absolute;
 	z-index: 19;
 	margin-top: 41.5%;
@@ -620,7 +620,7 @@
 	align-items: center;
 	justify-content: center;
 }
-.part4Title.open{
+.SDCpart4Title.open{
     transition: 1s;
 	width: 100%;
 	margin-left: 0%;
@@ -630,12 +630,25 @@
 	background-color: transparent;
 }
 
-.part4Title.close{
+.SDCpart4Title.close{
 	transition: 1s;
 	margin-top: 41.5%;
 	margin-left: 50.89%;
 	width: 39.06%;
 	background-color: #1E3239;
+}
+.SDCContent.open{
+	position: absolute;
+	margin-top: 0%;
+	margin-left: 0%;
+	width: 100%;
+	padding-bottom: 56%;
+	background-color: #1E3239;
+	opacity: 0.95;
+	display: flex;
+	
+	color: #ffffff;
+	
 }
 .SDCContent{
 	position: absolute;
@@ -651,19 +664,7 @@
 	align-items: center;
 	justify-content: flex-end;
 }
-.SDCContent.open{
-	position: absolute;
-	margin-top: 0%;
-	margin-left: 0%;
-	width: 100%;
-	padding-bottom: 56%;
-	background-color: #1E3239;
-	opacity: 0.95;
-	display: flex;
-	color: #ffffff;
-	
-}
-.part1Contenttext{
+.SDCpart1Contenttext{
 	position: absolute;
 	margin-top: 54%;
 	margin-left: 55.21%;
@@ -676,12 +677,12 @@
 	line-height: 1.8;
 	opacity: 0;
 }
-.part1Contenttext.open{
+.SDCpart1Contenttext.open{
 	transition: 1s opacity  0.5s;
 	opacity: 1;
 }
 
-.part2Contenttext{
+.SDCpart2Contenttext{
 	position: absolute;
 	margin-top: 54%;
 	margin-left: 55.21%;
@@ -695,12 +696,12 @@
 	opacity: 0;
 	
 }
-.part2Contenttext.open{
+.SDCpart2Contenttext.open{
 	transition: 1s opacity  0.5s;
 	opacity: 1;
 }
 
-.part3Contenttext{
+.SDCpart3Contenttext{
 	position: absolute;
 	margin-top: 54%;
 	margin-left: 55.21%;
@@ -712,12 +713,12 @@
 	justify-content: flex-start;
 	opacity: 0;
 }
-.part3Contenttext.open{
+.SDCpart3Contenttext.open{
 	transition: 1s opacity  0.5s;
 	opacity: 1;
 }
 
-.part4Contenttext{
+.SDCpart4Contenttext{
 	position: absolute;
 	margin-top: 54%;
 	margin-left: 55.21%;
@@ -730,7 +731,7 @@
 	opacity: 0;
 	 
 }
-.part4Contenttext.open{
+.SDCpart4Contenttext.open{
 	transition: 1s opacity  0.5s;
 	opacity: 1;
 }
@@ -874,7 +875,38 @@
 	opacity: 1;	
 }
 
+.OACpart1Title{
+	position: absolute;
+	z-index: 19;
+	margin-top: 17.5%;
+	margin-left: 10.42%;
+	font-size: 1.66rem;
+	width: 39.06%;
+	background-color: #1E3239;
+	color: #fff;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
 
+.OACpart1Title.open{
+    transition: 1s;
+	width: 100%;
+	margin-left: 0%;
+	font-size: 2.35rem;
+	margin-top: 4.5%;
+	color: #E98C24;
+	background-color: transparent;
+
+}
+
+.OACpart1Title.close{
+	width: 39.06%;
+    transition: 1s;
+	margin-top: 17.5%;
+	margin-left: 10.42%;
+	background-color: #1E3239;
+}
 
 .OACpart2{
 	position: absolute;
@@ -926,6 +958,36 @@
 	opacity: 1;	
 }
 
+.OACpart2Title{
+	position: absolute;
+	z-index: 19;
+	margin-top: 17.5%;
+	margin-left: 50.89%;
+	font-size: 1.66rem;
+	width: 39.06%;
+	background-color: #1E3239;
+	color: #fff;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+.OACpart2Title.open{
+    transition: 1s;
+	width: 100%;
+	margin-left: 0%;
+	font-size: 2.35rem;
+	margin-top: 4.5%;
+	color: #E98C24;
+	background-color: transparent;
+}
+
+.OACpart2Title.close{
+	width: 39.06%;
+    transition: 1s;
+	margin-top: 17.5%;
+	margin-left: 50.89%;
+	background-color: #1E3239;
+}
 
 .OACpart3{
 	position: absolute;
@@ -975,6 +1037,38 @@
 	opacity: 1;	
 }
 
+.OACpart3Title{
+	position: absolute;
+	z-index: 19;
+	margin-top: 41.5%;
+	margin-left: 10.42%;
+	font-size: 1.66rem;
+	width: 39.06%;
+	background-color: #1E3239;
+	color: #fff;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+.OACpart3Title.open{
+   	transition: 1s;
+	width: 100%;
+	margin-left: 0%;
+	font-size: 2.35rem;
+	margin-top: 4.5%;
+	color: #E98C24;
+	background-color: transparent;
+}
+
+.OACpart3Title.close{
+	width: 39.06%;
+	transition: 1s;
+	margin-top: 41.5%;
+	margin-left: 10.42%;
+	background-color: #1E3239;
+}
+
+
 .OACpart4{
 	position: absolute;
 	z-index: 17;
@@ -1023,6 +1117,37 @@
 	opacity: 1;	
 }
 
+.OACpart4Title{
+	position: absolute;
+	z-index: 19;
+	margin-top: 41.5%;
+	margin-left: 50.89%;
+	font-size: 1.66rem;
+	width: 39.06%;
+	background-color: #1E3239;
+	color: #fff;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+.OACpart4Title.open{
+    transition: 1s;
+	width: 100%;
+	margin-left: 0%;
+	font-size: 2.35rem;
+	margin-top: 4.5%;
+	color: #E98C24;
+	background-color: transparent;
+}
+
+.OACpart4Title.close{
+	width: 39.06%;
+	transition: 1s;
+	margin-left: 50.89%;
+	margin-top: 41.5%;
+	background-color: #1E3239;
+}
+
 .OACContent{
 	position: absolute;
 	z-index: -1;
@@ -1048,6 +1173,77 @@
 	display: flex;
 	color: #ffffff;
 	
+}
+
+.OACpart1Contenttext{
+	position: absolute;
+	margin-top: 54%;
+	margin-left: 55.21%;
+	width: 44.79%;
+	background-color: transparent;
+	font-size: 2.2rem;
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+	line-height: 1.8;
+	opacity: 0;
+}
+.OACpart1Contenttext.open{
+	transition: 1s opacity  0.5s;
+	opacity: 1;
+}
+
+.OACpart2Contenttext{
+	position: absolute;
+	margin-top: 54%;
+	margin-left: 55.21%;
+	width: 44.79%;
+	background-color: transparent;
+	font-size: 2.2rem;
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+	line-height: 2;
+	opacity: 0;
+}
+.OACpart2Contenttext.open{
+	transition: 1s opacity  0.5s;
+	opacity: 1;
+}
+
+.OACpart3Contenttext{
+	position: absolute;
+	margin-top: 54%;
+	margin-left: 55.21%;
+	width: 44.79%;
+	background-color: transparent;
+	font-size: 2.2rem;
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+	opacity: 0;
+}
+.OACpart3Contenttext.open{
+	transition: 1s opacity  0.5s;
+	opacity: 1;
+}
+
+.OACpart4Contenttext{
+	position: absolute;
+	margin-top: 54%;
+	margin-left: 55.21%;
+	width: 44.79%;
+	background-color: transparent;
+	font-size: 2.2rem;
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+	opacity: 0;
+	 
+}
+.OACpart4Contenttext.open{
+	transition: 1s opacity  0.5s;
+	opacity: 1;
 }
 
 .MeltingIce{
