--- a/網頁/AttackPage/AttackPageAll.css
+++ b/網頁/AttackPage/AttackPageAll.css
@@ -140,6 +140,7 @@ button{
 	background-color: transparent;
 	font-size: 1.33rem;
 	display: none;
+	border: solid 2px red
 }
 .view4-1Mobile{
 	font-family: Gen Jyuu Gothic ;
