--- a/網頁/AttackPage/AtackPagePart4.css
+++ b/網頁/AttackPage/AtackPagePart4.css
@@ -251,6 +251,23 @@
 	transition: 1s;
 	opacity: 0.5;
 }
+.Backbutton-Mobile{
+	position: absolute;
+	z-index: 17;
+	margin-top: 0%;
+	margin-left: 100%;
+	height: 100%;
+	opacity: 0;
+}
+
+.Backbutton-Mobile:hover{
+	-webkit-filter:brightness(1.6);
+}
+
+.Backbutton-Mobile.open{
+	transition: 1s;
+	opacity: 0.5;
+}
 .ButtonTitle{
 	position: absolute;
 	margin-left: 5%;
