--- a/網頁/AttackPage/AtackPagePart4.css
+++ b/網頁/AttackPage/AtackPagePart4.css
@@ -209,7 +209,7 @@
 	width: 100%;
 	margin-top: 0%;
 	padding-bottom: 56%;
-	background-color: transparent;
+	background-color: #ffffff;
 	outline: none;
 
 }
