--- a/網頁/AttackPage/AtackPagePart4.css
+++ b/網頁/AttackPage/AtackPagePart4.css
@@ -207,7 +207,7 @@
 	margin-left: -0.1%;
 	width: 100%;
 	margin-top: 0%;
-	padding-bottom: 56%;
+	height: 100%;
 	background-color: #ffff;
 	outline: none;
 
