--- a/網頁/AttackPage/AtackPagePart4.css
+++ b/網頁/AttackPage/AtackPagePart4.css
@@ -232,7 +232,9 @@
     -ms-transition: 1.5s;
     -o-transition: 1.5s;
 }
-
+#menu{
+	font-size: 3rem;
+}
 .Backbutton{
 	position: absolute;
 	z-index: 17;
