--- a/網頁/AttackPage/AtackPagePart4.css
+++ b/網頁/AttackPage/AtackPagePart4.css
@@ -208,7 +208,7 @@
 	width: 100%;
 	margin-top: 5%;
 	height: 95%;
-	background-color: #ffff;
+	background-color: transparent;
 	outline: none;
 
 }
@@ -257,6 +257,7 @@
 	z-index: 17;
 	margin-top: 0%;
 	margin-left: 100%;
+	width: auto;
 	height: 100%;
 	opacity: 0;
 }
