--- a/網頁/AttackPage/AtackPagePart4.css
+++ b/網頁/AttackPage/AtackPagePart4.css
@@ -204,7 +204,7 @@
 }
 .MainMenu-Mobile{
 	position: absolute;
-	margin-left: -0.1%;
+	margin-left: -50.1%;
 	width: 100%;
 	margin-top: 5%;
 	height: 95%;
@@ -255,7 +255,7 @@
 	z-index: 17;
 	margin-top: 0%;
 	margin-left: 100%;
-	width: auto;
+	width: 5%;
 	height: 100%;
 	opacity: 0;
 }
