--- a/網頁/AttackPage/AttackPageAll.css
+++ b/網頁/AttackPage/AttackPageAll.css
@@ -152,6 +152,7 @@ button{
 	background-color: transparent;
 	font-size: 1.33rem;
 	display: none;
+	overflow-x: hidden;
 }
 .view5{
 	font-family: Gen Jyuu Gothic ;
